--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeds/"
-        }
+        },
+        "files": [
+            "app/Helpers/BackgroundJobHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
